--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.5",
     "boostrap": "^2.0.0",
+    "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "font-awesome": "^4.7.0",
     "fontawesome": "^5.6.3",
